<resources>
    <string name="app_name">CreditManagementApplication</string>
    <string name="action_settings">Settings</string>
    <string name="transferlogo">transferLogo</string>
    <string name="transferit">TransferIt</string>
    <string name="view_all_users">View All Users</string>
    <string name="title_activity_view_users">ViewUsers</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="your_details">Your Details</string>
    <string name="title_activity_transfer_credits">transferCredits</string>
    <string name="transfer_credit">Transfer Credit</string>
    <string name="transfer_credits">Transfer Credits</string>
    <string name="transfer">Transfer</string>
    <string name="select_a_user">Select A User</string>
    <string name="enter_credits_to_transfer">Enter Credits to Transfer</string>
    <string name="eg_25">Eg. 25</string>
    <string name="todo">TODO</string>
</resources>
