<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5CCEDD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".transferCredits"
    tools:showIn="@layout/activity_transfer_credits">

    <ImageView
        android:id="@+id/TransferTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/transferTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transferit" />

    <TextView
        android:id="@+id/creditSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="18dp"
        android:text="@string/enter_credits_to_transfer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/transferButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="165dp"
        android:background="@drawable/buttonshape"
        android:onClick="creditsChange"
        android:text="@string/transfer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:targetApi="m"
        tools:text="Transfer" />

    <TextView
        android:id="@+id/transferTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/transfer_credits"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/userSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TransferTitle" />

    <TextView
        android:id="@+id/userSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="17dp"
        android:text="@string/select_a_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/transferTitle"
        app:layout_constraintTop_toBottomOf="@+id/transferTitle" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/creditSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSelection" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:hint="@string/eg_25"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/transferButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditSelect"
        android:maxLength="4"
        android:importantForAutofill="no" />

</android.support.constraint.ConstraintLayout>