<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5CCEDD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/transferImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/transferlogo"
        app:layout_constraintBottom_toTopOf="@+id/transferIt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transfer" />

    <ImageView
        android:id="@+id/transferIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="114dp"
        android:contentDescription="@string/transferit"
        app:layout_constraintBottom_toTopOf="@+id/viewUsers"
        app:layout_constraintStart_toStartOf="@+id/transferImage"
        app:layout_constraintTop_toBottomOf="@+id/transferImage"
        app:srcCompat="@drawable/transferit" />

    <Button
        android:id="@+id/viewUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/buttonshape"
        android:onClick="viewUsers"
        android:text="@string/view_all_users"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferIt"
        tools:targetApi="m"
        tools:text="View All Users" />

</android.support.constraint.ConstraintLayout>