<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5CCEDD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserDetails"
    tools:showIn="@layout/activity_user_details">

    <Button
        android:id="@+id/transferCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:background="@drawable/buttonshape"
        android:onClick="transfer"
        android:text="@string/transfer_credit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTitle"
        tools:targetApi="m"
        tools:text="Transfer Credit" />

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="248dp"
        android:text="@string/your_details"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/transferCredit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TransferTitle" />

    <ListView
        android:id="@+id/userDetailsList"
        android:layout_width="392dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/transferCredit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTitle" />

    <ImageView
        android:id="@+id/TransferTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/userTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transferit" />
</android.support.constraint.ConstraintLayout>